--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,64 +1,693 @@
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
+@import "tw-animate-css";
+@custom-variant dark (&:where(.dark, .dark *));
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+  :root {
+    --radius: 0.5rem;
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.145 0 0);
+    --card: oklch(1 0 0);
+    --card-foreground: oklch(0.145 0 0);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.145 0 0);
+    --primary: oklch(0.205 0 0);
+    --primary-foreground: oklch(0.985 0 0);
+    --secondary: oklch(0.97 0 0);
+    --secondary-foreground: oklch(0.205 0 0);
+    --muted: oklch(0.97 0 0);
+    --muted-foreground: oklch(0.556 0 0);
+    --accent: oklch(0.97 0 0);
+    --accent-foreground: oklch(0.205 0 0);
+    --destructive: oklch(0.577 0.245 27.325);
+    --destructive-foreground: oklch(0.577 0.245 27.325);
+    --border: oklch(0.922 0 0);
+    --input: oklch(0.922 0 0);
+    --ring: oklch(0.708 0 0);
+    --chart-1: oklch(0.646 0.222 41.116);
+    --chart-2: oklch(0.6 0.118 184.704);
+    --chart-3: oklch(0.398 0.07 227.392);
+    --chart-4: oklch(0.828 0.189 84.429);
+    --chart-5: oklch(0.769 0.188 70.08);
+    --radius: 0.625rem;
+    --sidebar: oklch(0.985 0 0);
+    --sidebar-foreground: oklch(0.145 0 0);
+    --sidebar-primary: oklch(0.205 0 0);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.97 0 0);
+    --sidebar-accent-foreground: oklch(0.205 0 0);
+    --sidebar-border: oklch(0.922 0 0);
+    --sidebar-ring: oklch(0.708 0 0);
+  }
+
+  .dark {
+    --background: oklch(0.145 0 0);
+    --foreground: oklch(0.985 0 0);
+    --card: oklch(0.145 0 0);
+    --card-foreground: oklch(0.985 0 0);
+    --popover: oklch(0.145 0 0);
+    --popover-foreground: oklch(0.985 0 0);
+    --primary: oklch(0.985 0 0);
+    --primary-foreground: oklch(0.205 0 0);
+    --secondary: oklch(0.269 0 0);
+    --secondary-foreground: oklch(0.985 0 0);
+    --muted: oklch(0.269 0 0);
+    --muted-foreground: oklch(0.708 0 0);
+    --accent: oklch(0.269 0 0);
+    --accent-foreground: oklch(0.985 0 0);
+    --destructive: oklch(0.396 0.141 25.723);
+    --destructive-foreground: oklch(0.637 0.237 25.331);
+    --border: oklch(0.269 0 0);
+    --input: oklch(0.269 0 0);
+    --ring: oklch(0.439 0 0);
+    --chart-1: oklch(0.488 0.243 264.376);
+    --chart-2: oklch(0.696 0.17 162.48);
+    --chart-3: oklch(0.769 0.188 70.08);
+    --chart-4: oklch(0.627 0.265 303.9);
+    --chart-5: oklch(0.645 0.246 16.439);
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(0.269 0 0);
+    --sidebar-ring: oklch(0.439 0 0);
+  }
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+/* Dark mode support */
+@media (prefers-color-scheme: dark) {
+  :root {
+    /* Add dark mode color overrides here if needed */
+  }
 }
 
 @theme inline {
+  /* Custom screens */
+  --breakpoint-xs: 475px;
+
+  /* Custom colors */
+  --color-primary-100: #ffe8f0;
+  --color-primary: #ee2b69;
+  --color-secondary: #fbe843;
+
+  --color-black-100: #333333;
+  --color-black-200: #141413;
+  --color-black-300: #7d8087;
+  --color-black: #000000;
+
+  --color-white-100: #f7f7f7;
+  --color-white: #ffffff;
+
+  /* Custom font family */
+  --font-family-work-sans: "Work Sans", sans-serif;
+
+  /* Custom border radius */
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  /* Custom box shadows */
+  --box-shadow-100: 2px 2px 0px 0px rgb(0, 0, 0);
+  --box-shadow-200: 2px 2px 0px 2px rgb(0, 0, 0);
+  --box-shadow-300: 2px 2px 0px 2px rgb(238, 43, 105);
+
+  /* Additional custom colors from updates */
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 }
 
-@theme {
-  screens {
-    xs: 475px;
+/* Custom utilities for animations and typography */
+@layer utilities {
+  /* Layout utilities */
+  .flex-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  colors {
-    primary: {
-      100: #FFE8F0;
-      DEFAULT: #EE2B69;
-    },
-    secondary: {
-      DEFAULT: #FBE843
-    };
-    black: {
-      100: #333333;
-      200: #141413;
-      300: #7D8087;
-      DEFAULT: #000000;
-    };
-    white: {
-      100: #F7F7F7;
-      DEFAULT: #FFFFFF;
+
+  /* Typography utilities */
+  .text-30-extrabold {
+    font-size: 30px;
+    font-weight: 800;
+    color: white;
+  }
+
+  .text-30-bold {
+    font-size: 30px;
+    font-weight: 700;
+    color: black;
+  }
+
+  .text-30-semibold {
+    font-weight: 600;
+    font-size: 30px;
+    color: black;
+  }
+
+  .text-26-semibold {
+    font-weight: 600;
+    font-size: 26px;
+    color: black;
+  }
+
+  .text-24-black {
+    font-size: 24px;
+    font-weight: 900;
+    color: black;
+  }
+
+  .text-20-medium {
+    font-weight: 500;
+    font-size: 20px;
+    color: black;
+  }
+
+  .text-16-medium {
+    font-weight: 500;
+    font-size: 16px;
+    color: black;
+  }
+
+  .text-14-normal {
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(247 247 247 / 0.8);
+  }
+
+  /* Container utilities */
+  .pink_container {
+    width: 100%;
+    background-color: var(--color-primary);
+    min-height: 530px;
+    background-image: linear-gradient(
+      to right,
+      transparent 49.5%,
+      rgba(251, 232, 67, 0.2) 49.5%,
+      rgba(251, 232, 67, 0.6) 50.5%,
+      transparent 50.5%
+    );
+    background-size: 5% 100%;
+    background-position: center;
+    background-repeat: repeat-x;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2.5rem 1.5rem;
+  }
+
+  .tag {
+    background-color: var(--color-secondary);
+    padding: 0.75rem 1.5rem;
+    font-family: var(--font-family-work-sans);
+    font-weight: 700;
+    border-radius: 0.125rem;
+    text-transform: uppercase;
+    position: relative;
+  }
+
+  .tag::before {
+    content: "";
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    border-top: 10px solid black;
+    border-right: 10px solid transparent;
+  }
+
+  .tag::after {
+    content: "";
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    border-bottom: 10px solid black;
+    border-left: 10px solid transparent;
+  }
+
+  .heading {
+    text-transform: uppercase;
+    background-color: black;
+    padding: 0.75rem 1.5rem;
+    font-family: var(--font-family-work-sans);
+    font-weight: 800;
+    color: white;
+    font-size: 36px;
+    line-height: 46px;
+    max-width: 80rem;
+    text-align: center;
+    margin: 1.25rem 0;
+  }
+
+  @media (min-width: 640px) {
+    .heading {
+      font-size: 54px;
+      line-height: 64px;
     }
   }
-  fontFamily {
-    work-sans: var(--font-work-sans);
-  }
-  borderRadius {
-    lg: var(--radius);
-    md: calc(var(--radius) - 2px);
-    sm: calc(var(--radius) - 4px);
-  }
-  boxShadow {
-    100: 2px 2px 0px 0px rgb(0 0 0);
-    200: 2px 2px 0px 2px rgb(0 0 0);
-    300: 2px 2px 0px 2px rgb(238 43 105);
-  }
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .sub-heading {
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    max-width: 42rem;
+    text-align: center;
+    word-break: break-words;
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  .section_container {
+    padding: 2.5rem 1.5rem;
+    max-width: 80rem;
+    margin: 0 auto;
+  }
+
+  .card_grid {
+    display: grid;
+    gap: 1.25rem;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @media (min-width: 768px) {
+    .card_grid {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+
+  .card_grid-sm {
+    display: grid;
+    gap: 1.25rem;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .no-result {
+    color: var(--color-black-100);
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  /* Profile utilities */
+  .profile_container {
+    width: 100%;
+    padding-bottom: 2.5rem;
+    padding-top: 5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    max-width: 80rem;
+    margin: 0 auto;
+    display: flex;
+    gap: 2.5rem;
+    flex-direction: column;
+  }
+
+  @media (min-width: 1024px) {
+    .profile_container {
+      flex-direction: row;
+    }
+  }
+
+  .profile_card {
+    width: 20rem;
+    padding: 5rem 1.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-primary);
+    border: 5px solid black;
+    box-shadow: var(--box-shadow-100);
+    border-radius: 30px;
+    position: relative;
+    z-index: 0;
+    height: fit-content;
+  }
+
+  @media (max-width: 1023px) {
+    .profile_card {
+      width: 100%;
+    }
+  }
+
+  .profile_title {
+    width: 91.666667%;
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 20px;
+    padding: 0.75rem 1.25rem;
+    position: absolute;
+    top: -2.25rem;
+    box-shadow: var(--box-shadow-100);
+  }
+
+  .profile_title::after {
+    content: "";
+    position: absolute;
+    top: -0.25rem;
+    right: 0;
+    transform: skewY(-6deg);
+    background-color: black;
+    z-index: -1;
+    border-radius: 20px;
+    width: 100%;
+    height: 60px;
+  }
+
+  .profile_title::before {
+    content: "";
+    position: absolute;
+    bottom: -0.25rem;
+    left: 0;
+    transform: skewY(-6deg);
+    width: 100%;
+    height: 60px;
+    background-color: black;
+    z-index: -1;
+    border-radius: 20px;
+  }
+
+  .profile_image {
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid black;
+  }
+
+  /* Idea details utilities */
+  .divider {
+    border-style: dotted;
+    background-color: rgb(161 161 170);
+    max-width: 56rem;
+    margin: 2.5rem auto;
+  }
+
+  .view_skeleton {
+    background-color: rgb(161 161 170);
+    height: 2.5rem;
+    width: 6rem;
+    border-radius: 0.5rem;
+    position: fixed;
+    bottom: 0.75rem;
+    right: 0.75rem;
+  }
+
+  /* Navbar utilities */
+  .avatar {
+    padding: 0;
+    background: none;
+    border-radius: 50%;
+    filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07))
+      drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  }
+
+  .avatar:focus-visible {
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+  }
+
+  .dropdown-menu {
+    width: 14rem;
+    border: 5px solid black;
+    background-color: white;
+    padding: 1.25rem;
+    border-radius: 1rem;
+  }
+
+  .login {
+    border: 5px solid black;
+    padding: 1rem 0;
+    background-color: white;
+    color: black;
+    position: relative;
+    box-shadow: var(--box-shadow-100);
+    font-family: var(--font-family-work-sans);
+    font-weight: 500;
+    transition: all 0.5s;
+  }
+
+  .login:hover {
+    box-shadow: none;
+  }
+
+  /* Search form utilities */
+  .search-form {
+    max-width: 48rem;
+    width: 100%;
+    min-height: 80px;
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 80px;
+    font-size: 24px;
+    margin-top: 2rem;
+    padding: 0 1.25rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1.25rem;
+  }
+
+  .search-input {
+    flex: 1;
+    font-weight: 700;
+    width: 100%;
+    height: auto;
+    outline: none;
+  }
+
+  .search-input::placeholder {
+    font-weight: 600;
+    color: var(--color-black-100);
+  }
+
+  .search-btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* Startup card utilities */
+  .startup-card {
+    background-color: white;
+    border: 5px solid black;
+    padding: 1.5rem 1.25rem;
+    border-radius: 22px;
+    box-shadow: var(--box-shadow-200);
+    transition: all 0.5s;
+  }
+
+  .startup-card:hover {
+    border-color: var(--color-primary);
+    box-shadow: var(--box-shadow-300);
+    background-color: var(--color-primary-100);
+  }
+
+  .startup-card_date {
+    font-weight: 500;
+    font-size: 16px;
+    background-color: var(--color-primary-100);
+    padding: 0.5rem 1rem;
+    border-radius: 50px;
+  }
+
+  .startup-card:hover .startup-card_date {
+    background-color: var(--color-white-100);
+  }
+
+  .startup-card_desc {
+    font-weight: 400;
+    font-size: 16px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin: 0.75rem 0;
+    color: var(--color-black-100);
+    word-break: break-all;
+  }
+
+  .startup-card_img {
+    width: 100%;
+    height: 164px;
+    border-radius: 10px;
+    object-fit: cover;
+  }
+
+  .startup-card_btn {
+    border-radius: 50px;
+    background-color: var(--color-black-200);
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    padding: 0.75rem 1.25rem;
+  }
+
+  .startup-card_skeleton {
+    width: 100%;
+    height: 24rem;
+    border-radius: 22px;
+    background-color: rgb(161 161 170);
+  }
+
+  /* Startup form utilities */
+  .startup-form {
+    max-width: 42rem;
+    margin: 2.5rem auto;
+    background-color: white;
+    padding: 0 1.5rem;
+  }
+
+  .startup-form > * + * {
+    margin-top: 2rem;
+  }
+
+  .startup-form_label {
+    font-weight: 700;
+    font-size: 18px;
+    color: black;
+    text-transform: uppercase;
+  }
+
+  .startup-form_input {
+    border: 3px solid black;
+    padding: 1.75rem 1.25rem;
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+    border-radius: 50px;
+    margin-top: 0.75rem;
+  }
+
+  .startup-form_input::placeholder {
+    color: var(--color-black-300);
+  }
+
+  .startup-form_textarea {
+    border: 3px solid black;
+    padding: 1.25rem;
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+    border-radius: 20px;
+    margin-top: 0.75rem;
+  }
+
+  .startup-form_textarea::placeholder {
+    color: var(--color-black-300);
+  }
+
+  .startup-form_error {
+    color: rgb(239 68 68);
+    margin-top: 0.5rem;
+    margin-left: 1.25rem;
+  }
+
+  .startup-form_editor {
+    margin-top: 0.75rem;
+    border: 3px solid black;
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+  }
+
+  .startup-form_editor::placeholder {
+    color: var(--color-black-300);
+  }
+
+  .startup-form_btn {
+    background-color: var(--color-primary);
+    border: 4px solid black;
+    border-radius: 50px;
+    padding: 1.25rem;
+    min-height: 70px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 18px;
+  }
+
+  /* View utilities */
+  .view-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 1.25rem;
+    position: fixed;
+    bottom: 0.75rem;
+    right: 0.75rem;
+  }
+
+  .view-text {
+    font-weight: 500;
+    font-size: 16px;
+    background-color: var(--color-primary-100);
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    text-transform: capitalize;
+  }
+
+  .category-tag {
+    font-weight: 500;
+    font-size: 16px;
+    background-color: var(--color-primary-100);
+    padding: 0.5rem 1rem;
+    border-radius: 50px;
+  }
+
+  /* Custom pattern utility */
+  .pattern {
+    background-image: linear-gradient(
+      to right,
+      transparent 49.5%,
+      rgba(251, 232, 67, 0.2) 49.5%,
+      rgba(251, 232, 67, 0.6) 50.5%,
+      transparent 50.5%
+    );
+    background-size: 5% 100%;
+    background-position: center;
+    background-repeat: repeat-x;
+  }
+
+  /* MD Editor toolbar override */
+  .w-md-editor-toolbar {
+    padding: 10px !important;
+  }
 }
