Add hero section and Implement search functionality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,11 @@
   }
 }
 
+/* @theme {
+  --color-primary-100: #ffe8f0;
+  --color-primary: #EE2B69;
+} */
+
 @theme inline {
   /* Custom screens */
   --breakpoint-xs: 475px;
@@ -128,7 +133,7 @@
   --color-card-foreground: var(--card-foreground);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
+  /* --color-primary: var(--primary); */
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -221,11 +226,12 @@
     min-height: 530px;
     background-image: linear-gradient(
       to right,
-      transparent 49.5%,
-      rgba(251, 232, 67, 0.2) 49.5%,
-      rgba(251, 232, 67, 0.6) 50.5%,
-      transparent 50.5%
+      transparent 49%,
+      rgba(251, 232, 67, 0.2) 49%,
+      rgba(251, 232, 67, 0.6) 51%,
+      transparent 51%
     );
+
     background-size: 5% 100%;
     background-position: center;
     background-repeat: repeat-x;
